# realtime-image-analysis

./: .gitignore  README.md
realtime-analysis-with-deeplearning/: .env.example  pyproject.toml
realtime-analysis-with-deeplearning/app/core/config/: settings.py
realtime-analysis-with-deeplearning/app/domain/: __init__.py
realtime-analysis-with-deeplearning/app/infrastructure/repositories/: __init__.py
realtime-analysis-with-deeplearning/app/infrastructure/repositories/camera/: connection.py  detector.py
realtime-analysis-with-deeplearning/app/infrastructure/repositories/database/: __init__.py  connection.py  producer.py
realtime-analysis-with-deeplearning/tests/: test_rtsp.py
realtime-analysis-with-simple-model/: pyproject.toml
realtime-analysis-with-simple-model/app/core/config/: settings.py
realtime-analysis-with-simple-model/app/infrastructure/repositories/camera/: capture.py
realtime-analysis-with-simple-model/app/infrastructure/repositories/detector/: __init__.py  models.py
realtime-analysis-with-simple-model/docs/: roadmap.md
realtime-analysis-with-yolo/: .gitignore  Makefile  pyproject.toml
realtime-analysis-with-yolo/app/: __init__.py
realtime-analysis-with-yolo/app/core/config/: __init__.py  settings.py
realtime-analysis-with-yolo/app/domain/camera/: __init__.py  use_cases.py
realtime-analysis-with-yolo/app/infrastructure/repositories/: __init__.py
realtime-analysis-with-yolo/app/infrastructure/repositories/camera/: __init__.py  capture.py
realtime-analysis-with-yolo/app/infrastructure/repositories/detector/: __init__.py  models.py
realtime-analysis-with-yolo/app/infrastructure/repositories/producer/: __init__.py
realtime-analysis-with-yolo/docs/: roadmap.md
realtime-api/: .env.example  pyproject.toml
realtime-api/app/: __init__.py
realtime-api/app/core/config/: settings.py
realtime-api/app/domain/detection/: entities.py  use_cases.py
realtime-api/app/infrastructure/repositories/database/: __init__.py  connection.py  consumer.py  producer.py
realtime-api/app/infrastructure/repositories/detection/: __init__.py
realtime-api/app/routes/: factory.py
realtime-api/app/routes/detection/: __init__.py  contracts.py
rtia/: pyproject.toml
rtia/app/: __init__.py
rtia/app/core/: rtsp.py
rtia/app/core/config/: settings.py
rtia/app/domain/camera/: __init__.py  use_cases.py
rtia/app/infrastructure/: __init__.py
rtia/app/infrastructure/camera/: capture.py
rtia/app/infrastructure/repositories/camera/: __init__.py  capture.py
rtia/tests/: conftest.py  test_rtsp.py
