[tool.poetry]
name = "realtime-image-analysis"
version = "0.1.0"
description = "Analysing images in real time from my street with OpenCV"
authors = ["Natan Nascimento <natan.nascimento@xpi.com.br>"]

[tool.poetry.dependencies]
python = "3.8"
opencv-python = "^4.5.4"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
