[tool.poetry]
name = "realtime-image-analysis"
version = "0.1.0"
description = "Analysing images in real time from my street with OpenCV"
authors = ["Natan Nascimento <contato@natanascimento.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app:main"

[tool.poetry.dependencies]
python = "3.8"
python-dotenv = "^0.19.2"
pytest = "^6.2.5"
opencv-python = "^3.4.0"
numpy = "^1.12.0"
tensorflow = "^2.0.0"
six = "^1.6.0"
imutils = "^0.5.4"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
